--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reqwest = "0.11.15"
+reqwest = { version = "0.11", features = ["json"] }
+select = "0.6.0"
+serde = { version = "1.0.158", features = ["derive"] }
+tokio = { version = "1", features = ["full"] }
