--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reqwest = { version = "0.11", features = ["json"] }
-select = "0.6.0"
-serde = { version = "1.0.158", features = ["derive"] }
+reqwest = { version = "0.11", features = ["json", "blocking"] }
+scraper = "0.13.0"
 tokio = { version = "1", features = ["full"] }
